--- a/settings_af.json
+++ b/settings_af.json
@@ -1,5 +1,5 @@
 {
-    ClientID: "1736583587",
-    ClientTag: "DC207DBC7AE7540FB17A7272D7838975",
-    LicenseFile: "license.lic"
+    "ClientID": "1736583587",
+    "ClientTag": "DC207DBC7AE7540FB17A7272D7838975",
+    "LicenseFile": "license.lic"
 }
