added files, fixing bugs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,8 @@ find_package(GracenoteSDK 3.07.7 REQUIRED)
 set (GRACENOTESDK_CPP_INCLUDE_DIR ${GRACENOTESDK_ROOT_WITHOUT_QUOTES}/wrappers/gnsdk_cplusplus/src_wrapper)
 
 add_definitions(-DGNSDK_STORAGE_SQLITE=1)
+add_definitions(-DGNSDK_MUSICID=1)
+add_definitions(-DGNSDK_MUSICID_STREAM=1)
 
 file (GLOB SRC ${CMAKE_SOURCE_DIR}/src/*.cpp)
 file (GLOB WRAPPER_SRC ${GRACENOTESDK_CPP_INCLUDE_DIR}/*.cpp)
